# docling-pdf-api

./: Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
.github/workflows/: publish.yml
tests/: test_app.py
